@@ -25,7 +25,6 @@
       on Windows Vista and above
     - high DPI screens support was improved
     - Internals: flags field removed from winx_file_disposition structure
-    - MS Visual Studio 6.0 development environment support dropped
     - many zenwinx prototypes changed by replacing short keyword by wchar_t
     - unsafe IncreaseGoogleAnalyticsCounterAsynch routine
       removed from wgx library
@@ -54,6 +53,8 @@
       WgxLoadIcon and WgxGetTextDimensions routines added to wgx library
     - WgxGetResourceString behavior changed
     - math.lshift function added to Lua library
+    - incremental compilation enabled
+    - MS Visual Studio 6.0 development environment support dropped
 
 
   Version 5.0.3  2012-02-26
